# daddy_bot

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.portainer.yml  pyproject.toml
.github/workflows/: ci.yml
assets/nineball/: Daddy_Nineball.json
data/: bibine_places.json  bibine_polls.json  bibine_state.json  bibine_subscribers.json  chats.json
skills/: telegram_streaming.md
src/daddy_bot/: __init__.py  main.py
src/daddy_bot/core/: __init__.py  config.py  error_handlers.py  rate_limit.py  router_registry.py
src/daddy_bot/modules/: __init__.py  admin.py  auto_triggers.py  bibine.py  f_respects.py  fun.py  help.py  social_stub.py  start.py  utility.py
src/daddy_bot/services/: __init__.py  openai_service.py
src/daddy_bot/utils/: __init__.py  patterns.py
tests/: test_patterns.py  test_rate_limit.py
